[package]
name = "cmail"
version = "0.2.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Send email with the output of long running commands."
homepage = "https://github.com/BurntSushi/rust-cmail"
repository = "https://github.com/BurntSushi/rust-cmail"
readme = "README.md"
keywords = ["email", "cli", "command"]
license = "Unlicense/MIT"

[dependencies]
chan = "0.1"
chan-signal = "0.1"
docopt = "0.8"
serde = "1"
serde_derive = "1"

[[bin]]
name = "cmail"
path = "cmail.rs"
