[package]
name = "cmail"
version = "0.3.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Send email with the output of long running commands."
homepage = "https://github.com/BurntSushi/rust-cmail"
repository = "https://github.com/BurntSushi/rust-cmail"
readme = "README.md"
keywords = ["email", "cli", "command"]
license = "Unlicense/MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
crossbeam-channel = "0.5.14"
jiff = "0.1.16"
lexopt = "0.3.0"
libc = "0.2.169"
signal-hook = "0.3.17"

[[bin]]
name = "cmail"
path = "main.rs"
